--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "repl-api",
+  "description": "A NodeJS Replit API package wrapped around GraphQL queries, returning JSON data for easy use.",
   "type": "module",
+  "author": "kokonut",
+  "license": "MIT",
   "version": "0.0.1",
   "gypfile": true,
+  "repo": "https://github.com/kokonut27/repl-api.js",
+  "homepage": "https://repl-api.readthedocs.io",
   "dependencies": {
     "node-libcurl": "^2.3.4"
   }
